--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,24 @@
-<?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>45.0</version>
+<?xml version="1.0" encoding="UTF-8"?>
+<Package xmlns="http://soap.sforce.com/2006/04/metadata">
+    <version>48.0</version>
     <types>
+        <members>Track__c.AutorabitExtId__c</members>
+        <members>Track__c.Dataloader_Config__c</members>
+        <members>Track__c.Field123__c</members>
+        <members>Track__c.Field345__c</members>
+        <members>Track__c.Newfieldtrack__c</members>
         <members>Track__c.Track_Formula__c</members>
+        <members>Track__c.Track_list__c</members>
+        <members>Track__c.trackdate__c</members>
         <name>CustomField</name>
     </types>
     <types>
+        <members>Policy__c</members>
         <members>Track__c</members>
         <name>CustomObject</name>
+    </types>
+    <types>
+        <members>Track__c.All</members>
+        <name>ListView</name>
     </types>
 </Package>
