--- a/package.xml
+++ b/package.xml
@@ -2,6 +2,12 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <version>48.0</version>
     <types>
+        <members>A026</members>
+        <members>A027</members>
+        <members>A028</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
         <members>Policy__c.Rule</members>
         <name>CompactLayout</name>
     </types>
