--- a/package.xml
+++ b/package.xml
@@ -2,6 +2,9 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <version>48.0</version>
     <types>
+        <members>A0</members>
+        <members>A0123</members>
+        <members>A025</members>
         <members>A026</members>
         <members>A027</members>
         <members>A028</members>
