--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>44.0</version>
+    <version>47.0</version>
     <types>
-        <members>Track__c.Track_Formula__c</members>
+        <members>A012378</members>
+        <members>A025</members>
+        <members>A026</members>
+        <members>A027</members>
+        <members>A028</members>
+        <members>A0456</members>
+        <members>A1</members>
+        <members>A100</members>
+        <members>ADDED</members>
+        <members>ADel1</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>Opportunity.OpportunitySales</members>
+        <name>BusinessProcess</name>
+    </types>
+    <types>
+        <members>New_Object__c.Contact__c</members>
+        <members>New_Object__c.Drivers_License__c</members>
+        <members>New_Object__c.Field1__c</members>
+        <members>New_Object__c.MailingState__c</members>
+        <members>Opportunity.AccountId</members>
+        <members>Opportunity.Amount</members>
+        <members>Opportunity.AutorabitExtId__c</members>
+        <members>Opportunity.CampaignId</members>
+        <members>Opportunity.CloseDate</members>
+        <members>Opportunity.ContractId</members>
+        <members>Opportunity.CurrentGenerators__c</members>
+        <members>Opportunity.Data_Quality_Description__c</members>
+        <members>Opportunity.Data_Quality_Score__c</members>
+        <members>Opportunity.DeliveryInstallationStatus__c</members>
+        <members>Opportunity.Description</members>
+        <members>Opportunity.ExpectedRevenue</members>
+        <members>Opportunity.IqScore</members>
+        <members>Opportunity.IsExcludedFromTerritory2Filter</members>
+        <members>Opportunity.IsPrivate</members>
+        <members>Opportunity.LeadSource</members>
+        <members>Opportunity.MainCompetitors__c</members>
+        <members>Opportunity.Name</members>
+        <members>Opportunity.NextStep</members>
+        <members>Opportunity.OrderNumber__c</members>
+        <members>Opportunity.Order_Generated__c</members>
+        <members>Opportunity.OwnerId</members>
+        <members>Opportunity.PartnerAccountId</members>
+        <members>Opportunity.Permission_Test__c</members>
+        <members>Opportunity.Pricebook2Id</members>
+        <members>Opportunity.Probability</members>
+        <members>Opportunity.Request_Format__c</members>
+        <members>Opportunity.StageName</members>
+        <members>Opportunity.Sub_Lead_Source__c</members>
+        <members>Opportunity.Territory2Id</members>
+        <members>Opportunity.TotalOpportunityQuantity</members>
+        <members>Opportunity.TrackingNumber__c</members>
+        <members>Opportunity.Type</members>
+        <members>splchrmar31__c.Track_Formula__c</members>
         <name>CustomField</name>
+    </types>
+    <types>
+        <members>New_Object__c</members>
+        <members>Opportunity</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>Opportunity_to_Contract</members>
+        <members>Opportunity_to_Order</members>
+        <members>Opportunity_to_Order_with_Contract</members>
+        <name>Flow</name>
+    </types>
+    <types>
+        <members>TransObj12__c-TransObj1 Layout</members>
+        <members>TranslationObj2__c-TranslationObj2 Layout</members>
+        <members>Transport__c-Transport Layout</members>
+        <name>Layout</name>
+    </types>
+    <types>
+        <members>Opportunity.AllOpportunities</members>
+        <members>Opportunity.ClosingNextMonth</members>
+        <members>Opportunity.ClosingThisMonth</members>
+        <members>Opportunity.Default_Opportunity_Pipeline</members>
+        <members>Opportunity.MyOpportunities</members>
+        <members>Opportunity.NewLastWeek</members>
+        <members>Opportunity.NewThisWeek</members>
+        <members>Opportunity.Private</members>
+        <members>Opportunity.Won</members>
+        <name>ListView</name>
+    </types>
+    <types>
+        <members>Opportunity.SalesOpportunity</members>
+        <name>RecordType</name>
+    </types>
+    <types>
+        <members>New_Object__c.VerifyAge</members>
+        <name>ValidationRule</name>
+    </types>
+    <types>
+        <members>Opportunity.DeliveryStatus</members>
+        <members>Opportunity.TestingButton</members>
+        <name>WebLink</name>
     </types>
 </Package>
